--- a/index.html
+++ b/index.html
@@ -125,24 +125,24 @@
             <h1 class=" d-flex justify-content-center align-items-center">Contact</h1>
             <div class="row" id="contact-box">
                 <div class="col-12">
-                    <form id="submit-form" action="">
+                    <form id="submit-form" class="form" action="">
                         <div class="row">
                             <div class="col-md-10 col-md-offset-1">
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <input type="text" name="name" class="form-control" placeholder="Name">
+                                            <input type="text" required minlength="4" maxlength="12" name="name" class="form-control" placeholder="Name">
                                         </div>
                                         <div class="form-group">
-                                            <input type="text" name="mail" class="form-control" placeholder="Email">
+                                            <input type="email" required name="mail" class="form-control" placeholder="Email">
                                         </div>
                                         <div class="form-group">
-                                            <input type="text" name="mobile" class="form-control" placeholder="Phone">
+                                            <input type="text" required pattern="[0-9]*" minlength="10" maxlength="10" name="mobile" class="form-control" placeholder="Phone">
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <textarea name="message" id="message" cols="30" rows="7"
+                                            <textarea name="content" required id="message" cols="30" rows="7"
                                                 class="form-control" placeholder="Message"></textarea>
                                         </div>
                                         <div class="form-group">
@@ -176,25 +176,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
-    <script>
-        $("#submit-form").submit((e) => {
-            e.preventDefault()
-            $.ajax({
-                url: "https://script.google.com/macros/s/AKfycbwWOuOQLHLrAqVFMDVGDVLxs25E-wtAteSiLXF1A8QB9-NlgiHCkhd268K-cVc1BOlG2Q/exec",
-                data: $("#submit-form").serialize(),
-                method: "post",
-                success: function (response) {
-                    alert("Form submitted successfully")
-                    window.location.reload()
-                    //window.location.href="https://google.com"
-                },
-                error: function (err) {
-                    alert("Something Error")
 
-                }
-            })
-        })
-    </script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+    integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.js"></script>
+    <script src="form.js"> </script>
 </body>
 
 </html>
