--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <input type="text" required minlength="4" maxlength="12" name="name" class="form-control" placeholder="Name">
+                                            <input type="text" required required pattern="[A-Z]?[a-z]*" minlength="4" maxlength="12" name="name" class="form-control" placeholder="Name">
                                         </div>
                                         <div class="form-group">
                                             <input type="email" required name="mail" class="form-control" placeholder="Email">
@@ -163,10 +163,10 @@
     </section>
     <footer class="footer">
         <div class="logo-style ">
-            <a href="https://www.facebook.com/shinu.varghese.39142/"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.linkedin.com/in/shinu-varghese-71b318173/"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/SHINUVARGHESE"><i class="fab fa-github"></i></a>
-            <a href="https://www.instagram.com/shinu.varghese.39142/"><i class="fab fa-instagram-square"></i></a>
+            <a href="https://www.facebook.com/shinu.varghese.39142/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.linkedin.com/in/shinu-varghese-71b318173/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/SHINUVARGHESE" target="_blank"><i class="fab fa-github" target="_blank"></i></a>
+            <a href="https://www.instagram.com/shinu.varghese.39142/?hl=en" target="_blank"><i class="fab fa-instagram-square"></i></a>
         </div>
         <p class="copyright">Copyright Shinu varghese</p>
     </footer>
